fixed double scroll bar issue

--- a/assets/css/1-base/_base.scss
+++ b/assets/css/1-base/_base.scss
@@ -21,7 +21,7 @@ body {
 	font-family: $dosis;
 	color: $white-color;
 	background-color: $lightblue-color;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 p {
